<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory</string>

    <string name="action_delete_all_entries">Delete All Items</string>

    <string name="empty_view_title_text">There\'s no item registred</string>

    <string name="empty_view_subtitle_text">Get started by adding a item</string>

    <string name="editor_activity_title_new_item">Add a Item</string>

    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_item_successful">Item saved</string>

    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="editor_update_item_successful">Item updated</string>

    <string name="editor_update_item_failed">Error with updating item</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="category_overview">Overview</string>

    <string name="hint_item_name">Name</string>

    <string name="hint_item_price">Price</string>

    <string name="hint_item_quantity">Quantity</string>

    <string name="hint_supplier_email">Supplier Email</string>

    <string name="supplier">Supplier</string>

    <string name="money">$</string>

    <string name="contact_supplier">Contact Supplier</string>

    <string name="all_fields_required">You must fill all fields</string>

    <string name="add_image">Add image</string>

    <string name="name_required">Name required</string>

    <string name="price_required">Price required</string>

    <string name="quantity_required">Quantity required</string>

    <string name="email_required">Supplier email required</string>

    <string name="image_required">Image required</string>
</resources>
